# bespoke-ai-tools

./: .gitignore  MAINFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: s_array.py  workflow.yml
dev/: pyvenv.cfg
sp00kyvectors/: core.py  dataframes.py  meow.py  utils.py
sp00kyvectors/notbooks/: dataframe_ex.ipynb  dev.ipynb  explore_weather.ipynb
test/: test_cnn.py  test_core.py  test_local_changes.py  test_nn.py  test_plots.py  test_vector.py
