

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-analysis"  # Replace with your project name
version = "0.1.0"         # Replace with your project version

[tool.setuptools.packages.find]
where = ["."]
include = ["dev", "vectorstats"]
